<resources>
    <string name="app_name">Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="new_memo">New memo</string>
    <string name="set_reminder">Set reminder</string>
    <string name="delete">Delete</string>
    <string name="language">Language</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="none">None</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="newMemoAdded">New reminder added.</string>
    <string name="memoUpdated">Reminder updated.</string>
    <string name="deleteMemoDialog">Are you sure you want to delete this reminder?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="memoDeleted">Reminder was deleted.</string>
    <string name="saveReminder">Save reminder</string>
    <string name="information">Information</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="setTime">Set time</string>
    <string name="setDate">Set date</string>

</resources>
