<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.reminder.MainActivity">
    <item
        android:id="@+id/new_memo"
        android:orderInCategory="100"
        android:title="@string/new_memo"
        app:showAsAction="never" />
    <item
        android:id="@+id/set_reminder"
        android:checkable="false"
        android:enabled="false"
        android:orderInCategory="100"
        android:title="@string/set_reminder"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete"
        android:checkable="false"
        android:enabled="false"
        android:orderInCategory="100"
        android:title="@string/delete"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/language"
        android:orderInCategory="100"
        android:title="@string/language"
        app:showAsAction="never" />
</menu>
