<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetReminderActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/setReminderAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/setReminderToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <android.support.design.widget.TabLayout
            android:id="@+id/setReminderTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setReminderAppBar">

            <android.support.design.widget.TabItem
                android:id="@+id/reminderInformationTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information" />

            <android.support.design.widget.TabItem
                android:id="@+id/reminderTimeTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <android.support.design.widget.TabItem
                android:id="@+id/reminderDateTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />
        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/setReminderViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setReminderAppBar" />

</android.support.constraint.ConstraintLayout>